	**************************************************


		CHANGES IN R VERSION 2.8.0


OTHER

    o	Rcmd sets many more enviroment variables, all those set by
	R CMD under a Unix-alike which make sense.

    o	Rcmd now follows a similar strategy to R when finding a valid
	TMPDIR setting: it tries TMPDIR, TMP, TEMP and R_USER looking
	for a directory -- the last will succeed as it does for R.




	**************************************************
	*						 *
	*	       2.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.7.0 patched


BUG FIXES

    o	Sys.getenv() could read incorrectly non-ASCII values.

    o	Rgui now accepts Unicode characters invalid in the locale when
	pasted in and converts them to \uxxxx sequences before passing
	to R.



		CHANGES IN R VERSION 2.7.0


WINDOWS VERSIONS

    o	Versions of Windows older than 2000 are no longer supported
	(specifically, 95, 98, ME, NT4).  Windows 2000 is minimally
	tested, but those tests were successful.


GUI CHANGES

    o	The folder selection dialog used by choose.dir() and
 	File | Change dir is now re-sizeable with a status line showing
	the currently selected path, rather than having a separate
 	'Browse' button.

    o	When Rgui is launched from a terminal, C output from ill-formed
	packages that write to stdout or stderr rather than use
	Rprintf will appear in the terminal rather than being lost.
	(Only on XP or later.)  This can be very handy for debugging C
	code in packages: just write debugging messages to stdout.


INTERNATIONALIZATION

    o	If a string presented to the parser contains a \uxxxx escape
	invalid in the current locale, the string is recorded in UTF-8
	with the encoding declared.  This is likely to throw an error
	if it is used later in the session, but it can be printed, and
	used for e.g. plotting on the windows() device.  So "\u03b2"
	gives a Greek small beta and "\u2642" a 'male sign'.  Such